--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html xmlns="#" lang="en">
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=lixingyong.com/index.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=dango.com/index.html">
 </body>
 
 </html>
